EP-4336 (#824)